--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,13 @@ matrix:
     #       taps: homebrew/cask-versions
     #       casks: adoptopenjdk8
 
-    - os: osx
-      osx_image: xcode10.2
-      env: NODEJS_VERSION=11 BUILD_EPKSIGNER=ON
-      addons:
-        homebrew:
-          taps: homebrew/cask-versions
-          casks: adoptopenjdk8
+    # - os: osx
+    #   osx_image: xcode10.2
+    #   env: NODEJS_VERSION=11 BUILD_EPKSIGNER=ON
+    #   addons:
+    #     homebrew:
+    #       taps: homebrew/cask-versions
+    #       casks: adoptopenjdk8
 
     # - language: android
     #   env: NODEJS_VERSION=10
@@ -38,47 +38,48 @@ matrix:
           - build-tools-28.0.3
           - android-27
 
-    - language: cpp
-      dist: xenial
-      env: BUILD_EPKSIGNER
-      before_install:
-      install:
-      script:
-        - $TRAVIS_BUILD_DIR/ToolChains/src/epksigner/build.sh
-        - $TRAVIS_BUILD_DIR/ToolChains/src/epksigner/_build/sample/sample
+    # - language: cpp
+    #   dist: xenial
+    #   env: BUILD_EPKSIGNER
+    #   before_install:
+    #   install:
+    #   script:
+    #     - $TRAVIS_BUILD_DIR/ToolChains/src/epksigner/build.sh
+    #     - $TRAVIS_BUILD_DIR/ToolChains/src/epksigner/_build/sample/sample
 
 
-before_install:
-  - wget -q https://services.gradle.org/distributions/gradle-4.6-bin.zip
-  - sudo unzip -q gradle-4.6-bin.zip -d $TRAVIS_HOME/gradle/
-  - export PATH=$TRAVIS_HOME/gradle/gradle-4.6/bin:$PATH
+# before_install:
+#   - wget -q https://services.gradle.org/distributions/gradle-4.6-bin.zip
+#   - sudo unzip -q gradle-4.6-bin.zip -d $TRAVIS_HOME/gradle/
+#   - export PATH=$TRAVIS_HOME/gradle/gradle-4.6/bin:$PATH
 
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-      brew cask uninstall java;
-      wget -q https://dl.google.com/android/repository/sdk-tools-darwin-4333796.zip;
-      sudo unzip -q sdk-tools-darwin-4333796.zip -d $TRAVIS_HOME/android-sdk/;
-      export ANDROID_HOME=$TRAVIS_HOME/android-sdk;
-      sudo chmod -R 777 $ANDROID_HOME;
-      export PATH=$ANDROID_HOME/tools/bin:$ANDROID_HOME/tools:$ANDROID_HOME/build-tools:$PATH;
-      echo yes | sudo sdkmanager "build-tools;28.0.3";
-    fi
+#   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+#       brew cask uninstall java;
+#       wget -q https://dl.google.com/android/repository/sdk-tools-darwin-4333796.zip;
+#       sudo unzip -q sdk-tools-darwin-4333796.zip -d $TRAVIS_HOME/android-sdk/;
+#       export ANDROID_HOME=$TRAVIS_HOME/android-sdk;
+#       sudo chmod -R 777 $ANDROID_HOME;
+#       export PATH=$ANDROID_HOME/tools/bin:$ANDROID_HOME/tools:$ANDROID_HOME/build-tools:$PATH;
+#       echo yes | sudo sdkmanager "build-tools;28.0.3";
+#     fi
 
-install:
-  - nvm install ${NODEJS_VERSION}
-  - npm install -g cordova ionic
+# install:
+#   - nvm install ${NODEJS_VERSION}
+#   - npm install -g cordova ionic
 
 script:
-  - if [[ "$BUILD_EPKSIGNER" == "ON" ]]; then
-      $TRAVIS_BUILD_DIR/ToolChains/src/epksigner/build.sh;
-      $TRAVIS_BUILD_DIR/ToolChains/src/epksigner/_build/sample/sample;
-    fi
-  - $TRAVIS_BUILD_DIR/ToolChains/bin/build all
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-      $TRAVIS_BUILD_DIR/ToolChains/src/epksigner/build.sh;
-      $TRAVIS_BUILD_DIR/ToolChains/src/epksigner/_build/sample/sample;
-      cd $TRAVIS_BUILD_DIR/Runtime/platforms/ios && xcodebuild -showsdks;
-      sudo xcode-select -switch /Applications/Xcode.app/Contents/Developer/;
-      xcodebuild -scheme Elastos build -sdk iphonesimulator;
-    fi
-  # - cd $TRAVIS_BUILD_DIR/Runtime/platforms/android && gradle assembleRelease &&
-  - ls -l $TRAVIS_BUILD_DIR/Runtime/platforms/android/app/build/outputs/apk/debug/
+  - export
+  # - if [[ "$BUILD_EPKSIGNER" == "ON" ]]; then
+  #     $TRAVIS_BUILD_DIR/ToolChains/src/epksigner/build.sh;
+  #     $TRAVIS_BUILD_DIR/ToolChains/src/epksigner/_build/sample/sample;
+  #   fi
+  # - $TRAVIS_BUILD_DIR/ToolChains/bin/build all
+  # - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+  #     $TRAVIS_BUILD_DIR/ToolChains/src/epksigner/build.sh;
+  #     $TRAVIS_BUILD_DIR/ToolChains/src/epksigner/_build/sample/sample;
+  #     cd $TRAVIS_BUILD_DIR/Runtime/platforms/ios && xcodebuild -showsdks;
+  #     sudo xcode-select -switch /Applications/Xcode.app/Contents/Developer/;
+  #     xcodebuild -scheme Elastos build -sdk iphonesimulator;
+  #   fi
+  # # - cd $TRAVIS_BUILD_DIR/Runtime/platforms/android && gradle assembleRelease &&
+  # - ls -l $TRAVIS_BUILD_DIR/Runtime/platforms/android/app/build/outputs/apk/debug/
