--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,12 +10,17 @@ install:
   - echo y | "%ANDROID_HOME%\tools\android.bat" update sdk -u -a -t build-tools-27.0.0
   - echo y | "%ANDROID_HOME%\tools\android.bat" update sdk -u -a -t build-tools-28.0.3
   - echo y | "%ANDROID_HOME%\tools\android.bat" update sdk -u -a -t android-27
+  - echo y | "%ANDROID_HOME%\tools\android.bat" --help
+  - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat"  --licenses
   - git submodule update --init --recursive
 
 build_script:
   - ps: (new-object net.webclient).DownloadFile('https://services.gradle.org/distributions/gradle-4.6-bin.zip', 'C:\projects\gradle-4.6-bin.zip')
   - cmd: unzip -q C:\projects\gradle-4.6-bin.zip -d  C:\projects\
-  - cmd: set Path=C:\projects\gradle-4.6\bin;C:\ProgramData\Microsoft\AndroidSDK\25\tools;C:\ProgramData\Microsoft\AndroidSDK\25\build-tools;C:\ProgramData\Microsoft\AndroidSDK\25\platform-tools;%Path%
+  - cmd: set ANDROID_NDK_HOME="C:\\ProgramData\\Microsoft\\AndroidNDK64\\android-ndk-r17"
+  - cmd: ls -l "C:\\ProgramData\\Microsoft\\AndroidNDK64"
+  - cmd: set Path=%ANDROID_NDK_HOME%;C:\projects\gradle-4.6\bin;C:\ProgramData\Microsoft\AndroidSDK\25\tools;C:\ProgramData\Microsoft\AndroidSDK\25\build-tools;C:\ProgramData\Microsoft\AndroidSDK\25\platform-tools;%Path%
+  - cmd: set
   - cmd: npm install -g cordova ionic
   - cmd: python ToolChains/bin/build all
   - cmd: ls -l Runtime/platforms/android/app/build/outputs/apk/debug/
