--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -21,6 +21,9 @@ build_script:
   - cmd: ls -l "C:\\ProgramData\\Microsoft\\AndroidNDK64"
   - cmd: set Path=%ANDROID_NDK_HOME%;C:\projects\gradle-4.6\bin;C:\ProgramData\Microsoft\AndroidSDK\25\tools;C:\ProgramData\Microsoft\AndroidSDK\25\build-tools;C:\ProgramData\Microsoft\AndroidSDK\25\platform-tools;%Path%
   - cmd: set
-  - cmd: npm install -g cordova ionic
-  - cmd: python ToolChains/bin/build all
-  - cmd: ls -l Runtime/platforms/android/app/build/outputs/apk/debug/
+  - cmd: ls %ANDROID_NDK_HOME%
+  - cmd: ls %ANDROID_NDK_HOME%\platforms
+
+  # - cmd: npm install -g cordova ionic
+  # - cmd: python ToolChains/bin/build all
+  # - cmd: ls -l Runtime/platforms/android/app/build/outputs/apk/debug/
