--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,12 +17,13 @@ install:
 build_script:
   - ps: (new-object net.webclient).DownloadFile('https://services.gradle.org/distributions/gradle-4.6-bin.zip', 'C:\projects\gradle-4.6-bin.zip')
   - cmd: unzip -q C:\projects\gradle-4.6-bin.zip -d  C:\projects\
-  - cmd: set ANDROID_NDK_HOME="C:\\ProgramData\\Microsoft\\AndroidNDK64\\android-ndk-r17"
+  # - cmd: set ANDROID_NDK_HOME="C:\\ProgramData\\Microsoft\\AndroidNDK64\\android-ndk-r17"
   - cmd: ls -l "C:\\ProgramData\\Microsoft\\AndroidNDK64"
   - cmd: set Path=C:\projects\gradle-4.6\bin;C:\ProgramData\Microsoft\AndroidSDK\25\tools;C:\ProgramData\Microsoft\AndroidSDK\25\build-tools;C:\ProgramData\Microsoft\AndroidSDK\25\platform-tools;%Path%
   - cmd: set
-  - cmd: ls %ANDROID_NDK_HOME%
-  - cmd: ls %ANDROID_NDK_HOME%\platforms
+  # - cmd: ls %ANDROID_NDK_HOME%
+  # - cmd: ls %ANDROID_NDK_HOME%\platforms
+  - cmd: ls %ANDROID_HOME%\ndk-bundle
   - cmd: npm install -g cordova ionic
   - cmd: python ToolChains/bin/build all
   - cmd: ls -l Runtime/platforms/android/app/build/outputs/apk/debug/
