--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,7 +12,7 @@ install:
   - echo y | "%ANDROID_HOME%\tools\android.bat" update sdk -u -a -t build-tools-28.0.3
   - echo y | "%ANDROID_HOME%\tools\android.bat" update sdk -u -a -t android-27
   - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" "cmake;3.10.2.4988404"
-  - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" "patcher;v4"
+  # - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" "patcher;v4"
   - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" "ndk-bundle"
   - git submodule update --init --recursive
 
