--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,7 +13,7 @@ install:
   - echo y | "%ANDROID_HOME%\tools\android.bat" update sdk -u -a -t android-27
   - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" "cmake;3.10.2.4988404"
   # - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" "patcher;v4"
-  - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" "ndk-bundle"
+  # - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" "ndk-bundle"
   - git submodule update --init --recursive
 
 build_script:
