--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,7 +13,8 @@ install:
   - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" "cmake;3.10.2.4988404"
   # - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" "patcher;v4"
   # - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" "ndk-bundle"
-  - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" --version
+  - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" --update
+  - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" --list
   - cmd: ls "C:\\ProgramData\\Microsoft\\AndroidSDK
   - git submodule update --init --recursive
 
