--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,25 +13,21 @@ install:
   - echo y | "%ANDROID_HOME%\tools\android.bat" update sdk -u -a -t android-27
   - echo y| "%ANDROID_HOME%\tools\bin\sdkmanager.bat" "cmake;3.10.2.4988404"
   # - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" "patcher;v4"
-  - echo y| "%ANDROID_HOME%\tools\bin\sdkmanager.bat" "ndk-bundle"
-  - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" --update
-  - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" --list
-  - cmd: ls "C:\\ProgramData\\Microsoft\\AndroidSDK
+  # - echo y| "%ANDROID_HOME%\tools\bin\sdkmanager.bat" "ndk-bundle"
+  # - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" --update
+  # - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" --list
   - git submodule update --init --recursive
 
 build_script:
   - ps: (new-object net.webclient).DownloadFile('https://services.gradle.org/distributions/gradle-4.6-bin.zip', 'C:\projects\gradle-4.6-bin.zip')
   - cmd: unzip -q C:\projects\gradle-4.6-bin.zip -d  C:\projects\
-  # - cmd: set ANDROID_NDK_HOME="C:\\ProgramData\\Microsoft\\AndroidNDK64\\android-ndk-r17"
-  - cmd: ls -l "C:\\ProgramData\\Microsoft\\AndroidNDK64"
+  - cmd: set ANDROID_NDK_HOME="C:\\ProgramData\\Microsoft\\AndroidNDK64\\android-ndk-r17"
+  # - cmd: ls -l "C:\\ProgramData\\Microsoft\\AndroidNDK64"
   # - cmd: set Path=C:\projects\gradle-4.6\bin;C:\ProgramData\Microsoft\AndroidSDK\25\tools;C:\ProgramData\Microsoft\AndroidSDK\25\build-tools;C:\ProgramData\Microsoft\AndroidSDK\25\platform-tools;%Path%
   - cmd: set Path=C:\projects\gradle-4.6\bin;%Path%
   - cmd: set
   - cmd: ls %ANDROID_HOME%
   - cmd: ls %ANDROID_NDK_HOME%
-  # - cmd: ls %ANDROID_NDK_HOME%
-  # - cmd: ls %ANDROID_NDK_HOME%\platforms
-  # - cmd: ls %ANDROID_HOME%\ndk-bundle
   - cmd: npm install -g cordova ionic
   - cmd: python ToolChains/bin/build all
   - cmd: ls -l Runtime/platforms/android/app/build/outputs/apk/debug/
