--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,18 +2,16 @@ image: Visual Studio 2017
 
 environment:
   ANDROID_HOME: "C:\\ProgramData\\Microsoft\\AndroidSDK\\25"
-  ANDROID_NDK_HOME: "C:\\ProgramData\\Microsoft\\AndroidNDK64\\android-ndk-r17"
+  # ANDROID_NDK_HOME: "C:\\ProgramData\\Microsoft\\AndroidNDK64\\android-ndk-r17"
 
 install:
-  - echo y | "%ANDROID_HOME%\tools\android.bat" update sdk -u -a -t platforms;android-28
-  - echo y | "%ANDROID_HOME%\tools\android.bat" update sdk -u -a -t tools
-  - echo y | "%ANDROID_HOME%\tools\android.bat" update sdk -u -a -t platform-tools
-  - echo y | "%ANDROID_HOME%\tools\android.bat" update sdk -u -a -t build-tools-27.0.0
-  - echo y | "%ANDROID_HOME%\tools\android.bat" update sdk -u -a -t build-tools-28.0.3
-  - echo y | "%ANDROID_HOME%\tools\android.bat" update sdk -u -a -t android-27
+  - echo y| "%ANDROID_HOME%\tools\android.bat" update sdk -u -a -t tools
+  - echo y| "%ANDROID_HOME%\tools\android.bat" update sdk -u -a -t platform-tools
+  - echo y| "%ANDROID_HOME%\tools\android.bat" update sdk -u -a -t build-tools-27.0.0
+  - echo y| "%ANDROID_HOME%\tools\android.bat" update sdk -u -a -t build-tools-28.0.3
+  - echo y| "%ANDROID_HOME%\tools\android.bat" update sdk -u -a -t android-27
   - echo y| "%ANDROID_HOME%\tools\bin\sdkmanager.bat" "cmake;3.10.2.4988404"
-  # - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" "patcher;v4"
-  # - echo y| "%ANDROID_HOME%\tools\bin\sdkmanager.bat" "ndk-bundle"
+  - echo y| "%ANDROID_HOME%\tools\bin\sdkmanager.bat" "ndk-bundle"
   # - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" --update
   # - echo y | "%ANDROID_HOME%\tools\bin\sdkmanager.bat" --list
   - git submodule update --init --recursive
@@ -21,13 +19,9 @@ install:
 build_script:
   - ps: (new-object net.webclient).DownloadFile('https://services.gradle.org/distributions/gradle-4.6-bin.zip', 'C:\projects\gradle-4.6-bin.zip')
   - cmd: unzip -q C:\projects\gradle-4.6-bin.zip -d  C:\projects\
-  - cmd: set ANDROID_NDK_HOME="C:\\ProgramData\\Microsoft\\AndroidNDK64\\android-ndk-r17"
-  # - cmd: ls -l "C:\\ProgramData\\Microsoft\\AndroidNDK64"
+  # - cmd: set ANDROID_NDK_HOME="C:\\ProgramData\\Microsoft\\AndroidNDK64\\android-ndk-r17"
   # - cmd: set Path=C:\projects\gradle-4.6\bin;C:\ProgramData\Microsoft\AndroidSDK\25\tools;C:\ProgramData\Microsoft\AndroidSDK\25\build-tools;C:\ProgramData\Microsoft\AndroidSDK\25\platform-tools;%Path%
   - cmd: set Path=C:\projects\gradle-4.6\bin;%Path%
-  - cmd: set
-  - cmd: ls %ANDROID_HOME%
-  - cmd: ls %ANDROID_NDK_HOME%
   - cmd: npm install -g cordova ionic
   - cmd: python ToolChains/bin/build all
   - cmd: ls -l Runtime/platforms/android/app/build/outputs/apk/debug/
